--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/0918nobita/Homepage#readme",
   "devDependencies": {
+    "postcss": "^6.0.22",
     "pug": "^2.0.3",
     "yarn": "^1.7.0"
   },
