--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "mathjax": "^2.7.5",
     "vue": "^2.5.2",
+    "vue-mathjax": "^0.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
