--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0"
+  }
 }
