--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     "noFallthroughCasesInSwitch": true,    /* switch ステートメントに case のフォールスルーがある場合にエラーを報告します。 */
 
     /* モジュール解決のオプション */
-    // "moduleResolution": "node",            /* モジュールの解決方法を指定します: 'node' (Node.js) または 'classic' (TypeScript pre-1.6)。 */
+    "moduleResolution": "node",            /* モジュールの解決方法を指定します: 'node' (Node.js) または 'classic' (TypeScript pre-1.6)。 */
     // "baseUrl": "./",                       /* 相対モジュール名を解決するためのベース ディレクトリ。 */
     // "paths": {},                           /* 'baseUrl' の相対的な場所を検索するためにインポートを再マップする一連のエントリ。 */
     // "rootDirs": [],                        /* 結合されたコンテンツがランタイムでのプロジェクトの構成を表すルート フォルダーの一覧。 */
