--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
     "parcel-bundler": "^1.12.3",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
