--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 .DS_Store
-node_modules/
-/dist/
-npm-debug.log*
+node_modules
+.cache
+dist
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
-
-# Editor directories and files
-.idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
