--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "author": "0918nobita <nobita.0918@gmail.com>",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "dev": "parcel index.html"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
